Fixed result overflow issue

--- a/css/custom.css
+++ b/css/custom.css
@@ -47,6 +47,10 @@
   color: #fff;
 }
 
+.list-group-item {
+  overflow-x: auto;
+}
+
 .modal-body {
   overflow-x: auto;
 }
